--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build Docker Image
       run: |
-        docker build . --file Dockerfile --tag IMG_NAME:$(date +'%Y%m%d-%H%M')
+        docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
       env:
         IMG_NAME: "jrromb/img-bakery" 
         IMG_TAG: $(date +'%Y%m%d-%H%M')
