--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,4 +15,13 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
+        
+    - name: Push to Docker Registry
+      run: |
+        docker build -t $CONTAINER .
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        docker push $CONTAINER
+        docker logout
+
+
 
