--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -22,6 +22,12 @@ jobs:
         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
         docker push $CONTAINER
         docker logout
+        
+    - name: Update DockerHub Description
+      run: |
+        wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
+        chmod +x ./update_dockerhub_desc.sh
+        ./update_dockerhub_desc.sh
 
 
 
