--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,23 +15,23 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
-        
-    # - name: Push to Docker Registry
-    #   run: |
-    #     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    #     # docker push $IMG_NAME
-    #     docker logout
-        
-    - name: Update DockerHub Description
+    - name: Build Docker Image
       run: |
-        wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
-        chmod +x ./update_dockerhub_desc.sh
-        ./update_dockerhub_desc.sh
-      env:
-        CONTAINER: ${IMG_NAME}
+        docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
+        
+    - name: Push to Docker Registry
+      run: |
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        # docker push $IMG_NAME
+        docker logout
+        
+    # - name: Update DockerHub Description
+    #   run: |
+    #     wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
+    #     chmod +x ./update_dockerhub_desc.sh
+    #     ./update_dockerhub_desc.sh
+    #   env:
+    #     CONTAINER: ${IMG_NAME}
 
 
 
