--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -8,7 +8,6 @@ jobs:
     
     env:
       IMG_NAME: "jrromb/img-bakery" 
-      IMG_TAG: ${{date +'%Y%m%d-%H%M'}}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -17,6 +16,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
+        echo '::set-env name=IMG_TAG::$(date +'%Y%m%d-%H%M')'
         docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
         
     - name: Push to Docker Registry
