--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -16,13 +16,12 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        export IMG_TAG=$(date +'%Y%m%d-%H%M')
-        docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
+        docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
         
     - name: Push to Docker Registry
       run: |
         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-        docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
+        docker tag $IMG_NAME $IMG_NAME:latest
         docker push $IMG_NAME
         docker logout
         
