--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -16,12 +16,13 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build . --file Dockerfile --tag $IMG_NAME:$(date +'%Y%m%d-%H%M')
+        export IMG_TAG="$IMG_NAME:$(date +'%Y%m%d-%H%M')""
+        docker build . --file Dockerfile --tag $IMG_TAG
         
     - name: Push to Docker Registry
       run: |
         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-        docker tag $IMG_NAME $IMG_NAME:latest
+        docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
         docker images
         docker push $IMG_NAME
         docker logout
