--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -16,7 +16,8 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        echo '::set-env name=IMG_TAG::$(date +'%Y%m%d-%H%M')'
+        IMG_TAG=$(date +'%Y%m%d-%H%M')
+        echo '::set-env name=IMG_TAG::${{IMG_TAG}}'
         # IMG_TAG="$(date +'%Y%m%d-%H%M')"
         # docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
         
