github action push latest

--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -18,18 +18,17 @@ jobs:
       run: |
         IMG_TAG=$(date +'%Y%m%d-%H%M')
         echo "::set-env name=IMG_TAG::$IMG_TAG"
-        # IMG_TAG="$(date +'%Y%m%d-%H%M')"
-        # docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
+        docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
         
     - name: Push to Docker Registry
       run: |
         echo "this is the value [$IMG_TAG]"
-        # docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-        # docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
-        # docker images
-        # docker push $IMG_NAME
-        # docker logout
-        # rm -rf ~/.docker/config.json
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
+        docker images
+        docker push $IMG_NAME
+        docker logout
+        rm -rf ~/.docker/config.json
         
     # - name: Update DockerHub Description
     #   run: |
