--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -70,25 +70,25 @@ jobs:
 
             mv ./result/rasp-custom.img.gz ./${{ LITE_IMAGE }}
 
-        - name: create Release
-          uses: actions/create-release@v1
-          env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-              tag_name: ${{ github.ref }}
-              release_name: Release ${{ github.ref }}
-              draft: false
-              prerelease: false
+#         - name: create Release
+#           uses: actions/create-release@v1
+#           env:
+#               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           with:
+#               tag_name: ${{ github.ref }}
+#               release_name: Release ${{ github.ref }}
+#               draft: false
+#               prerelease: false
         
-        - name: upload lite image
-          uses: actions/upload-release-asset@v1
-          env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-              upload_url: ${{ steps.create_release.outputs.upload_url }}
-              asset_path: ./${{ LITE_IMAGE }}
-              asset_name: .${{ LITE_IMAGE }}
-              asset_content_type: application/zip
+#         - name: upload lite image
+#           uses: actions/upload-release-asset@v1
+#           env:
+#               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           with:
+#               upload_url: ${{ steps.create_release.outputs.upload_url }}
+#               asset_path: ./${{ LITE_IMAGE }}
+#               asset_name: .${{ LITE_IMAGE }}
+#               asset_content_type: application/zip
         
 
                 
