--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -20,55 +20,55 @@ jobs:
               cd ./docker
               docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
             
-        - name: Push to Docker Registry
-            run:|
-              echo "this is the value [$IMG_TAG]"
-              docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-              docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
-              docker images
-              docker push $IMG_NAME
-              docker logout
-              rm -rf ~/.docker/config.json
+#         - name: Push to Docker Registry
+#             run:|
+#               echo "this is the value [$IMG_TAG]"
+#               docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+#               docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
+#               docker images
+#               docker push $IMG_NAME
+#               docker logout
+#               rm -rf ~/.docker/config.json
             
-        # - name: Update DockerHub Description
-        #   run: |
-        #     wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
-        #     chmod +x ./update_dockerhub_desc.sh
-        #     ./update_dockerhub_desc.sh
-        #   env:
-        #     CONTAINER: ${IMG_NAME}
+#         # - name: Update DockerHub Description
+#         #   run: |
+#         #     wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
+#         #     chmod +x ./update_dockerhub_desc.sh
+#         #     ./update_dockerhub_desc.sh
+#         #   env:
+#         #     CONTAINER: ${IMG_NAME}
    
    
-    release_image:
-        name: create and release images
-        runs-on: ubuntu-latest
-        needs: [docker_push]
-        env:
-            IMG_NAME: "jrromb/img-bakery"
-            IMG_LITE_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
-            IMG_FULL_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
-            LITE_IMAGE: "raspibian-LITE-${{ github.ref }}.img.gz"
+#     release_image:
+#         name: create and release images
+#         runs-on: ubuntu-latest
+#         needs: [docker_push]
+#         env:
+#             IMG_NAME: "jrromb/img-bakery"
+#             IMG_LITE_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
+#             IMG_FULL_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
+#             LITE_IMAGE: "raspibian-LITE-${{ github.ref }}.img.gz"
 
-        steps:
-        - name: checkout code
-          uses: actions/checkout@master
+#         steps:
+#         - name: checkout code
+#           uses: actions/checkout@master
 
-        - name: create images              
-          run: |
-            RESULT="$PWD/result"
-            TRANSIT="$PWD/transit"
-            SCRIPT="$PWD/setup-image.sh"
+#         - name: create images              
+#           run: |
+#             RESULT="$PWD/result"
+#             TRANSIT="$PWD/transit"
+#             SCRIPT="$PWD/setup-image.sh"
 
-            docker run -d --rm \
-                -e IMG_URL="${{ IMG_LITE_URL }}" \
-                -v ${{ TRANSIT }}:/transit \
-                -v ${{ RESULT }}:/result \
-                -v ${{ SCRIPT }}:/setup-image.sh \
-                -v /dev:/dev \
-                --privileged \
-                ${{IMG_NAME}}
+#             docker run -d --rm \
+#                 -e IMG_URL="${{ IMG_LITE_URL }}" \
+#                 -v ${{ TRANSIT }}:/transit \
+#                 -v ${{ RESULT }}:/result \
+#                 -v ${{ SCRIPT }}:/setup-image.sh \
+#                 -v /dev:/dev \
+#                 --privileged \
+#                 ${{IMG_NAME}}
 
-            mv ./result/rasp-custom.img.gz ./${{ LITE_IMAGE }}
+#             mv ./result/rasp-custom.img.gz ./${{ LITE_IMAGE }}
 
 #         - name: create Release
 #           uses: actions/create-release@v1
