--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -3,51 +3,49 @@ name: my pipeline
 on: [push]
   
 jobs:
-    docker_push:
-        runs-on: ubuntu-latest
-        env:
-            IMG_NAME: "jrromb/img-bakery" 
-            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-            DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    # docker_push:
+    #     runs-on: ubuntu-latest
+    #     env:
+    #         IMG_NAME: "jrromb/img-bakery" 
+    #         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    #         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-        steps:
-        - uses: actions/checkout@v1
+    #     steps:
+    #     - uses: actions/checkout@v1
 
-        - name: Build Docker Image
-          run: |
-            IMG_TAG=$(date +'%Y%m%d-%H%M')
-            echo "::set-env name=IMG_TAG::$IMG_TAG"
-            cd ./docker
-            docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
+    #     - name: Build Docker Image
+    #       run: |
+    #         IMG_TAG=$(date +'%Y%m%d-%H%M')
+    #         echo "::set-env name=IMG_TAG::$IMG_TAG"
+    #         cd ./docker
+    #         docker build . --file Dockerfile --tag $IMG_NAME:$IMG_TAG
             
-        - name: Push to Docker Registry
-          run: |
-            echo "this is the value [$IMG_TAG]"
-            docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-            docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
-            docker images
-            docker push $IMG_NAME
-            docker logout
-            rm -rf ~/.docker/config.json
+    #     - name: Push to Docker Registry
+    #       run: |
+    #         echo "this is the value [$IMG_TAG]"
+    #         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    #         docker tag $IMG_NAME:$IMG_TAG $IMG_NAME:latest
+    #         docker images
+    #         docker push $IMG_NAME
+    #         docker logout
+    #         rm -rf ~/.docker/config.json
             
-        # - name: Update DockerHub Description
-        #   run: |
-        #     wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
-        #     chmod +x ./update_dockerhub_desc.sh
-        #     ./update_dockerhub_desc.sh
-        #   env:
-        #     CONTAINER: ${IMG_NAME}
+    #     # - name: Update DockerHub Description
+    #     #   run: |
+    #     #     wget https://raw.githubusercontent.com/jrrombaldo/containers/master/update_dockerhub_desc.sh
+    #     #     chmod +x ./update_dockerhub_desc.sh
+    #     #     ./update_dockerhub_desc.sh
+    #     #   env:
+    #     #     CONTAINER: ${IMG_NAME}
    
    
-    release_image:
+    build_lite_image:
         name: create and release images
         runs-on: ubuntu-latest
-        needs: [docker_push]
+        # needs: [docker_push]
         env:
             IMG_NAME: "jrromb/img-bakery"
-            IMG_LITE_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
-            IMG_FULL_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
-            LITE_IMAGE: "raspibian-LITE-${{ github.ref }}.img.gz"
+            VERSION: "raspbian_lite_latest"
 
         steps:
         - name: checkout code
@@ -62,22 +60,22 @@ jobs:
             echo $PWD
             
             docker run -i --rm \
-                -e IMG_URL="${IMG_LITE_URL}" \
+                -e IMG_URL=""https://downloads.raspberrypi.org/${VERSION}"" \
                 -v ${TRANSIT}:/transit \
-                -v $RESULT}:/result \
+                -v ${RESULT}:/result \
                 -v ${SCRIPT}:/setup-image.sh \
                 -v /dev:/dev \
                 --privileged \
                 ${IMG_NAME}
                 # use https://help.github.com/en/actions/configuring-and-managing-workflows/persisting-workflow-data-using-artifacts
-            #mv ./result/rasp-custom.img.gz ./${LITE_IMAGE}
+            #mv ./result/rasp-custom.img.gz ./${IMG_RESULT}
             ls ./result/*
             
         - name: upload lite image
           uses: actions/upload-artifact@v1
           with:
-            name: lite_image
-            path: result/${LITE_IMAGE}
+            name: ${VERSION}
+            path: ./result/rasp-custom.img.gz
 
 #         - name: create Release
 #           uses: actions/create-release@v1
