--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -39,10 +39,13 @@ jobs:
     #     #     CONTAINER: ${IMG_NAME}
    
    
-    build_lite_image:
+    build_images:
         name: create and release images
         runs-on: ubuntu-latest
         # needs: [docker_push]
+        strategy:
+          matrix:
+            VERSION: ["raspbian_lite_latest", "raspbian_latest"]
         env:
             IMG_NAME: "jrromb/img-bakery"
             VERSION: "raspbian_lite_latest"
@@ -54,12 +57,12 @@ jobs:
         - name: create images              
           run: |
             set -x
+            sudo apt install qemu-user-static -y
+
             RESULT="$PWD/result"
             TRANSIT="$PWD/transit"
             SCRIPT="$PWD/setup-image.sh"
             echo $PWD
-            
-            sudo apt install qemu-user-static -y
             
             docker run -i --rm \
                 -e IMG_URL=""https://downloads.raspberrypi.org/${VERSION}"" \
@@ -72,6 +75,7 @@ jobs:
                 # use https://help.github.com/en/actions/configuring-and-managing-workflows/persisting-workflow-data-using-artifacts
             #mv ./result/rasp-custom.img.gz ./${IMG_RESULT}
             ls ./result/*
+       
             
         - name: upload lite image
           uses: actions/upload-artifact@v1
@@ -79,25 +83,48 @@ jobs:
             name: ${VERSION}
             path: ./result/rasp-custom.img.gz
 
-#         - name: create Release
-#           uses: actions/create-release@v1
-#           env:
-#               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#           with:
-#               tag_name: ${{ github.ref }}
-#               release_name: Release ${{ github.ref }}
-#               draft: false
-#               prerelease: false
+
+
+
+
+
+    release_images:
+        name: creating release for images
+        needs: [build_images]
+
+        - name: download lite image
+          uses: actions/download-artifact@v1
+          with:
+            name: raspbian_lite_latest
+
+        - name: download full image
+          uses: actions/download-artifact@v1
+          with:
+            name: raspbian_latest
+
+        - name: check files
+          run: |
+          ls -R
+
+        # - name: create Release
+        #   uses: actions/create-release@v1
+        #   env:
+        #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #       tag_name: ${{ github.ref }}
+        #       release_name: Release ${{ github.ref }}
+        #       draft: false
+        #       prerelease: false
         
-#         - name: upload lite image
-#           uses: actions/upload-release-asset@v1
-#           env:
-#               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#           with:
-#               upload_url: ${{ steps.create_release.outputs.upload_url }}
-#               asset_path: ./${LITE_IMAGE}
-#               asset_name: .${LITE_IMAGE}
-#               asset_content_type: application/zip
+        # - name: upload lite image
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #       upload_url: ${{ steps.create_release.outputs.upload_url }}
+        #       asset_path: ./${LITE_IMAGE}
+        #       asset_name: .${LITE_IMAGE}
+        #       asset_content_type: application/zip
         
 
                 
