--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -44,6 +44,7 @@ jobs:
         runs-on: ubuntu-latest
         # needs: [docker_push]
         strategy:
+          fail-fast: false
           matrix:
             VERSION: ["raspbian_lite_latest", "raspbian_latest"]
         env:
