--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -39,14 +39,14 @@ jobs:
     #     #     CONTAINER: ${IMG_NAME}
    
    
-    build_images:
+    build_image_lite:
         name: create and release images
         runs-on: ubuntu-latest
         # needs: [docker_push]
-        strategy:
-          fail-fast: false
-          matrix:
-            VERSION: ["raspbian_lite_latest", "raspbian_latest"]
+        # strategy:
+        #   fail-fast: false
+        #   matrix:
+        #     VERSION: ["raspbian_lite_latest", "raspbian_latest"]
         env:
             IMG_NAME: "jrromb/img-bakery"
             VERSION: "raspbian_lite_latest"
