--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -42,14 +42,9 @@ jobs:
     build_image_lite:
         name: create and release images
         runs-on: ubuntu-latest
-        # needs: [docker_push]
-        # strategy:
-        #   fail-fast: false
-        #   matrix:
-        #     VERSION: ["raspbian_lite_latest", "raspbian_latest"]
         env:
-            IMG_NAME: "jrromb/img-bakery"
-            VERSION: "raspbian_lite_latest"
+            VERSION: "RaspibianLITE"
+            IMG_URL: "https://downloads.raspberrypi.org/raspbian_lite_latest"
 
         steps:
         - name: checkout code
@@ -57,48 +52,60 @@ jobs:
 
         - name: create images              
           run: |
-            set -x
-            sudo apt install qemu-user-static -y
-
-            RESULT="$PWD/result"
-            TRANSIT="$PWD/transit"
-            SCRIPT="$PWD/setup-image.sh"
-            echo $PWD
-            
-            docker run -i --rm \
-                -e IMG_URL=""https://downloads.raspberrypi.org/${VERSION}"" \
-                -v ${TRANSIT}:/transit \
-                -v ${RESULT}:/result \
-                -v ${SCRIPT}:/setup-image.sh \
-                -v /dev:/dev \
-                --privileged \
-                ${IMG_NAME}
-                # use https://help.github.com/en/actions/configuring-and-managing-workflows/persisting-workflow-data-using-artifacts
-            #mv ./result/rasp-custom.img.gz ./${IMG_RESULT}
-            ls ./result/*
-       
+            ./build.sh
+            mv ./result/rasp-custom.img.gz ./${VERSION}.img.gz    
             
         - name: upload lite image
           uses: actions/upload-artifact@v1
           with:
             name: ${VERSION}
-            path: ./result/rasp-custom.img.gz
+            path: ./${VERSION}.img.gz
+
+
+    build_image_GUI:
+      name: create and release images
+      runs-on: ubuntu-latest
+      env:
+          VERSION: "RaspibianGUI"
+          IMG_URL: "https://downloads.raspberrypi.org/raspbian_latest"
+
+      steps:
+      - name: checkout code
+        uses: actions/checkout@master
+
+      - name: create images              
+        run: |
+          ./build.sh
+          mv ./result/rasp-custom.img.gz ./${VERSION}.img.gz    
+          
+      - name: upload lite image
+        uses: actions/upload-artifact@v1
+        with:
+          name: ${VERSION}
+          path: ./${VERSION}.img.gz
+
+
+
+
+
+
+
 
     release_images:
       name: creating release for images
       runs-on: ubuntu-latest
-      needs: [build_images]
+      needs: [build_image_GUI, build_image_lite]
       
       steps:
         - name: download lite image
           uses: actions/download-artifact@v1
           with:
-            name: raspbian_lite_latest
+            name: RaspibianLITE
 
         - name: download full image
           uses: actions/download-artifact@v1
           with:
-            name: raspbian_latest
+            name: RaspibianGUI
 
         - name: check files
           run: |
