--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -109,6 +109,7 @@ jobs:
 
         - name: create Release
           uses: actions/create-release@v1
+          id: create_release
           env:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
